@@ -1332,6 +1332,11 @@
     "achievements.beerFactory.slots.automation.autoLevelUp.amount.25.title": "Transparent automation strategy",
     "achievements.beerFactory.slots.automation.autoLevelUp.amount.50.title": "Self-testing build",
     "achievements.beerFactory.slots.automation.autoLevelUp.amount.100.title": "Automate deployment",
+    "achievements.beerFactory.slots.automation.autoUpgrade": "Purchase __NFI[__KEY__] upgrades automatically",
+    "achievements.beerFactory.slots.automation.autoUpgrade.50.title": "Repetitive task",
+    "achievements.beerFactory.slots.automation.autoUpgrade.150.title": "Teaching by showing",
+    "achievements.beerFactory.slots.automation.autoUpgrade.500.title": "Neural network",
+    "achievements.beerFactory.slots.automation.autoUpgrade.1000.title": "Global automation",
     "achievements.beerFactory.slots.onAllBuildings.title": "Full House",
     "achievements.beerFactory.slots.onAllBuildings.description": "Construct at least one slot for each building",
     "achievements.beerFactory.slots.rebuild.title": "The Rebuild",
@@ -1596,6 +1601,8 @@
     "achievements.special.magnet.description": "Reach __NFI[1000] achievements",
     "achievements.special.noClick.title": "No click in this period",
     "achievements.special.noClick.description": "Play a round without clicking once",
+    "achievements.special.automation.title": "Fully automated",
+    "achievements.special.automation.description": "Play a round without clicking and without purchasing a building, a upgrade or a level up manually",
     "achievements.special.config.title": "Give me my own button",
     "achievements.special.config.description": "Configure a custom buy charge",
     "achievements.special.doubleConfig.title": "I need two of them",
